--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="banner">
             <h5>@Lundeveloper</h5>
             <div>
-                <h1 class="banner">laurinha linda </h1>
+                <h1 class="banner">WEB SPIDER</h1>
                 <h1 class="right">using javascript</h1>
             </div>
             <button>Developer↗</button>
